making mobile responsive

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <section class="section1 grid" id="home">
 
     <div class="left flex">
-        <img src="./assets/user.png" alt="profile pic" >
+        <img src="./assets/profile.jpeg" alt="profile pic" >
     </div>
     <div class="right flex">
         <div class="flex">
@@ -202,7 +202,7 @@
         <h2 class="title">About Me</h2>
         <div class="about-container flex">
             <div class="left">
-                <img src="./assets/user.png" alt="">
+                <img src="./assets/profile.jpeg" width="250vw" alt="">
             </div>
             <div class="right flex">
                 <h2>Aashutosh Neupane</h2>
