navigation buttion addition

--- a/index.html
+++ b/index.html
@@ -240,6 +240,12 @@
             </div>
         </div>
     </section>
+   <!-- round  button  -->
+
+  <button class="round " id="home">
+    <a href="#home" > <i class="fa-solid fa-arrow-up-long"></i></a>
+   
+  </button>
 
     <!-- footer section  -->
     <footer>
